# film-developer-agent

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  compose.yml  config.py  entrypoint.py  openapi.json  pyproject.toml  recipe.md  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
catalogs/: film_formats.meta.json
data/raw/: chatgpt_film_formats.json  chatgpt_film_formats.meta.json  digitaltruth_developers.json  digitaltruth_developers.meta.json  digitaltruth_film_data.json  digitaltruth_film_data.meta.json  digitaltruth_films.json  digitaltruth_films.meta.json
digitaltruth_normalizer/: normalizer_job.py
digitaltruth_normalizer/processors/: developer_processor.py  developing_times_processor.py  film_processor.py  format_processor.py  read_silver.py
digitaltruth_processor/: processor_job.py
digitaltruth_processor/processors/: developer_processor.py  developing_times_processor.py  film_processor.py  format_processor.py  read_catalogs.py
digitaltruth_processor/utils/: read_data.py
digitaltruth_scrapper/: digitaltruth_scrapper_job.py
digitaltruth_scrapper/digitaltruth/: base.py  fetch_developers.py  fetch_films.py  fetch_times.py  parser_helpers.py
digitaltruth_scrapper/processors/: fetch_film_information.py
digitaltruth_scrapper/utils/: random_delay.py  save_data.py
digitaltruth_transformer/: digitaltruth_transformer_job.py  prompt.txt
digitaltruth_transformer/digitaltruth_processors/: base.py  developer_processor.py  developing_times_processor.py  film_processor.py  format_processor.py  read_catalogs.py
digitaltruth_transformer/utils/: config.py  read_data.py  save_data.py
docs/: .interfacerules  ARCHITECTURE.md  DATA_CONTRACT.md  LEGAL.md  PHASE5_2.md  PHASE5_3.md  PHASE5_INTERFACE.md  PHASE5_SCREENS.md  PORTFOLIO.md  QUICKSTART.md  ROADMAP.md  WORKFLOW.md
docs/releases/: v0.2.0.md
film_agent_api/: cors.py  main.py  schemas.py
film_agent_cli/: main.py
film_core/: __init__.py  audit.py  catalog.py  contract.py  dataset_info.py  manifest.py  normalize.py  paths.py  pipeline.py  validation.py
film_core/query/: __init__.py  catalog.py  compare.py  explorer.py  gold_store.py  lookup.py  search.py
film_core/storage/: __init__.py  base.py  local.py
film_llm/: __init__.py  languages.py  prompt.py  recipe_cache.py  service.py  session_summary.py  settings.py  source_hash.py
film_llm/providers/: __init__.py  base.py  ollama.py  openai_provider.py
film_llm/templates/: recipe_prompt.j2  session_summary_prompt.j2
logger/: logger_config.py  logging_config.ini
scripts/: dev.sh  export_openapi.py
tests/: conftest.py  test_api.py  test_cli.py  test_cli_recipe.py  test_dataset_info.py  test_languages.py  test_llm_settings.py  test_normalize.py  test_normalizer_pipeline.py  test_ollama_provider.py  test_pipeline.py  test_processor_pipeline.py  test_prompt.py  test_query.py  test_recipe_cache.py  test_recipe_service.py  test_scraper_parsers.py  test_session_summary.py  test_storage.py  test_transformer_pipeline.py
(+78 files in other folders)
