[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "film-developer-agent"
version = "0.1.0"
description = "Local-first medallion ETL, API, and LLM recipe assistant for film development data"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Marcos Franco" }]
keywords = [
    "data-engineering",
    "etl",
    "parquet",
    "duckdb",
    "fastapi",
    "llm",
    "film-photography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DanielFrc/film-developer-agent"
Documentation = "https://github.com/DanielFrc/film-developer-agent/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/DanielFrc/film-developer-agent"
Issues = "https://github.com/DanielFrc/film-developer-agent/issues"
Changelog = "https://github.com/DanielFrc/film-developer-agent/blob/main/CHANGELOG.md"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "duckdb>=1.0.0",
    "rapidfuzz>=3.9.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
]

[project.scripts]
film-agent = "film_agent_cli.main:main"
film-api = "film_agent_api.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = [
    "film_core*",
    "film_agent_cli*",
    "film_agent_api*",
    "film_llm*",
    "digitaltruth_scrapper*",
    "digitaltruth_processor*",
    "digitaltruth_normalizer*",
    "digitaltruth_transformer*",
    "logger*",
]

[tool.setuptools.package-data]
film_llm = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
